# vxl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  DartConfig.cmake  DartConfigServer.cmake  Dockerfile  INSTALL.html  LICENSE  README  README.cmake  README.md  TODO.txt  UseSTLPort.cmake  UseVXL.cmake  aclocal.m4  all_dsps.dsw  circle.yml  cmake.configure.in  configure  configure.in  dash_example.cmake  dockerRunCommand.sh  dockerRunScript.sh  makefile  packages.mk  pre-commit  test_doc.txt  vxl_common.cmake
config/cmake/: GETTING_STARTED  README  UseVXL.cmake  VXLConfig.cmake.in  aclocal.m4  configure  configure.in  vxl-conf.in  vxl_config.h.in
contrib/: CMakeLists.txt  makefile
contrib/acmalgo/: CMakeLists.txt  vnl_rpoly_roots.cxx  vnl_rpoly_roots.h
contrib/brl/: CMakeLists.txt  makefile
contrib/conversions/: CMakeLists.txt  CMakeListsLink.txt  README  makefile
contrib/cul/: CMakeLists.txt  makefile  readme.txt
contrib/gel/: CMakeLists.txt  CMakeListsLink.txt  config.mk  gel.dsp  gel.dsw  iulibs.mk  makefile
contrib/mul/: CMakeLists.txt  CMakeListsLink.txt  config.mk  makefile  readme.txt
contrib/oul/: CMakeLists.txt  CMakeListsLink.txt  makefile  oul.dsp  oul_copyright.h  readme.txt
contrib/oxl/: .cvsignore  CMakeLists.txt  CMakeListsLink.txt  ChangeLog.ox  config.mk  fmk_libdeps.mk  makefile  oxl.dsp  oxl.dsw
contrib/prip/: CMakeLists.txt  makefile
contrib/rpl/: CMakeLists.txt  CMakeListsLink.txt  config.mk  makefile
contrib/tbl/: CMakeLists.txt  CMakeListsLink.txt  config.mk  makefile
core/: CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  ChangeLog.Leuven  ChangeLog.ox  aclocal.m4  allvxl.dsp  config.README  configure  configure.in  fmk.mk  fmk_libdeps.mk  iulibs.mk  libdeps.mk  makefile  vxl.dsp  vxl.dsw  vxl.dsw.keep  vxl_client.mk  vxl_config.h.in  vxl_copyright.h  vxl_version.h
core/doc/: .cvsignore  CHANGES.txt  Doxyfile  Doxyfile_for_vxl_doc_rules  README  algorithm.txt  doc.dsp  vxl_doc_rules.cxx  vxl_doc_rules.h  vxl_doxy.pl
core/examples/: CMakeLists.txt  create_image_vil.cxx  create_image_vil1.cxx  examples.dsp  makefile
core/testlib/: CMakeLists.txt  CMakeListsLink.txt  config.mk  introduction_doxy.txt  makefile  testlib.dsp  testlib_main.cxx  testlib_register.h  testlib_root_dir.cxx  testlib_root_dir.h  testlib_test.cxx  testlib_test.h
core/tests/: CMakeLists.txt  core_test_config.dsp  eigen.cpp  make_test_config.pl  makefile  test_build_info.cxx  test_build_info.h  test_build_info.h.in  test_config.cxx  test_driver.cxx  test_include.cxx  vxl_echo.cxx  vxl_test_config.dsp
core/vbl/: CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  TODO  client.mk  config.mk  dll.h  fmk.mk  introduction_doxy.txt  makefile  vbl.cxx  vbl.dsp  vbl_arg.cxx  vbl_arg.h  vbl_array.h  vbl_array.txx  vbl_array_1d.h  vbl_array_1d.hxx  vbl_array_1d.txx  vbl_array_2d.h  vbl_array_2d.hxx  vbl_array_2d.txx  vbl_array_3d.h  vbl_array_3d.hxx  vbl_array_3d.txx  vbl_attributes.h  vbl_attributes.hxx  vbl_attributes.txx  vbl_awk.cxx  vbl_awk.h  vbl_base_array_3d.cxx  vbl_base_array_3d.h  vbl_basic_optional.h  vbl_basic_relation.h  vbl_basic_relation.txx  vbl_basic_relation_type.h  vbl_basic_relation_where.h  vbl_basic_tuple.h  vbl_batch_compact_multimap.h  vbl_batch_multimap.h  (+119 more)
core/vcsl/: CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  README  config.mk  introduction_doxy.txt  makefile  vcsl.dsp  vcsl_angle.cxx  vcsl_angle.h  vcsl_angle_ref.h  vcsl_angle_sptr.h  vcsl_angle_unit.cxx  vcsl_angle_unit.h  vcsl_angle_unit_ref.h  vcsl_angle_unit_sptr.h  vcsl_axis.cxx  vcsl_axis.h  vcsl_axis_ref.h  vcsl_axis_sptr.h  vcsl_cartesian.cxx  vcsl_cartesian.h  vcsl_cartesian_2d.cxx  vcsl_cartesian_2d.h  vcsl_cartesian_2d_ref.h  vcsl_cartesian_2d_sptr.h  vcsl_cartesian_3d.cxx  vcsl_cartesian_3d.h  vcsl_cartesian_3d_ref.h  vcsl_cartesian_3d_sptr.h  vcsl_cartesian_ref.h  vcsl_cartesian_sptr.h  vcsl_composition.cxx  vcsl_composition.h  vcsl_composition_ref.h  vcsl_composition_sptr.h  vcsl_coordinate_system.cxx  vcsl_coordinate_system.h  vcsl_coordinate_system_ref.h  vcsl_coordinate_system_sptr.h  (+111 more)
core/vgl/: CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  client.mk  config.mk  fmk.mk  introduction_doxy.txt  makefile  vgl.dsp  vgl_1d_basis.cxx  vgl_1d_basis.h  vgl_1d_basis.hxx  vgl_1d_basis.txx  vgl_affine_coordinates.h  vgl_affine_coordinates.hxx  vgl_area.cxx  vgl_area.h  vgl_area.hxx  vgl_area.txx  vgl_bounding_box.h  vgl_bounding_box.hxx  vgl_bounding_box.txx  vgl_box_2d.cxx  vgl_box_2d.h  vgl_box_2d.hxx  vgl_box_2d.txx  vgl_box_3d.cxx  vgl_box_3d.h  vgl_box_3d.hxx  vgl_box_3d.txx  vgl_clip.cxx  vgl_clip.h  vgl_clip.hxx  vgl_clip.txx  vgl_closest_point.cxx  vgl_closest_point.h  vgl_closest_point.hxx  vgl_closest_point.txx  vgl_conic.h  vgl_conic.hxx  (+139 more)
core/vgui/: CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  UseVGUI.cmake  client.mk  config.mk  dll.h  easy-client.mk  introduction_doxy.txt  makefile  vgui.cxx  vgui.dsp  vgui.h  vgui_active_tableau.cxx  vgui_active_tableau.h  vgui_active_tableau_sptr.h  vgui_active_visible.cxx  vgui_active_visible.h  vgui_active_visible_ref.h  vgui_active_visible_sptr.h  (+318 more)
v3p/: CMakeLists.txt  CMakeListsLink.txt  Hermes.URL  bzlib.URL  dcmtk.URL  fmk_libdeps.mk  makefile  png.URL  tiff.URL  tiff_install.pl  v3p.dsw  v3p_tag  zlib.URL
vcl/: .cvsignore  CMakeLists.txt  CMakeListsHeaders.txt  CMakeListsLink.txt  LinkSTLPort.cmake  README  aclocal.m4  client.mk  configure  configure.in  example.IRIX6-CC-n32  example.SunOS5-CC  example.generic-KCC  example.generic-gcc  example.generic-gcc-2.95  headers.iso  introduction_doxy.txt  makefile  new-vcl_compiler.h  old-vcl_compiler.h  vcl.dsp  vcl_algorithm.h  vcl_algorithm.txx  vcl_atomic_count.h  vcl_bitset.h  vcl_cassert.cxx  vcl_cassert.h  vcl_cctype.h  vcl_cerrno.h  vcl_cfloat.h  vcl_ciso646.h  vcl_climits.h  vcl_clocale.h  vcl_cmath.cxx  vcl_cmath.h  vcl_compiler.h  vcl_compiler.h.in  vcl_compiler_detection.h  vcl_complex.h  vcl_complex.hxx  (+72 more)
(+24304 files in other folders)
