# initialize autoconf
AC_INIT(configure.in)

#AC_CONFIG_AUX_DIR(Scripts/Shell)
#AC_CHECK_PROG(AUTOCONF, autoconf,autoconf)

# check of the c++ compiler
AC_PROG_CXX
# check for the c compiler
AC_PROG_CC
# check for CPP
AC_PROG_CXXCPP
# # check for ranlib
# AC_PROG_RANLIB
# # check for X paths
# AC_PATH_X

# check for gettimeofday
AC_TWO_ARG_TIMEOFDAY

# fsm@robots. after running glimpse, I can't find anywhere but 
# vxl/vbl/vbl_timer.cxx which uses TWO_ARG_GETTIME. Can someone
# confirm that?
# If so, that would mean we can remove the makefile -D flags
# to do with time.
if test "$ac_twoarg_timeofday" = "yes"; then
  VXL_TWO_ARG_GETTIME="1"
else
  VXL_TWO_ARG_GETTIME="0"
fi

# fsm@robots
AC_VXL_UNISTD
AC_VXL_WORDS
AC_VXL_HAS_QSORT

# check for bigendian
AC_C_BIGENDIAN
if test $ac_cv_c_bigendian = no; then
  VXL_BIG_ENDIAN="0";
  VXL_LITTLE_ENDIAN="1";
else
  VXL_BIG_ENDIAN="1";
  VXL_LITTLE_ENDIAN="0";
fi

#--------------------------------------------------------------------------------
# complete list of substitutions:

# libraries
AC_SUBST(VXL_UNISTD_HAS_USECONDS_T)
AC_SUBST(VXL_UNISTD_HAS_INTPTR_T)
AC_SUBST(VXL_UNISTD_HAS_UALARM)
AC_SUBST(VXL_UNISTD_HAS_USLEEP)
AC_SUBST(VXL_UNISTD_HAS_LCHOWN)
AC_SUBST(VXL_UNISTD_HAS_PREAD)
AC_SUBST(VXL_UNISTD_HAS_PWRITE)
AC_SUBST(VXL_UNISTD_HAS_TELL)
AC_SUBST(VXL_STDLIB_HAS_QSORT)
AC_SUBST(VXL_STDLIB_HAS_LRAND48)
AC_SUBST(VXL_STDLIB_HAS_DRAND48)
AC_SUBST(VXL_MATH_HAS_FINITE)
AC_SUBST(VXL_UNISTD_USLEEP_IS_VOID)
AC_SUBST(VXL_TWO_ARG_GETTIME)

# architecture
AC_SUBST(VXL_BIG_ENDIAN)
AC_SUBST(VXL_LITTLE_ENDIAN)
AC_SUBST(VXL_INT8)
AC_SUBST(VXL_INT16)
AC_SUBST(VXL_INT32)
AC_SUBST(VXL_INT64)

#--------------------------------------------------------------------------------
# output section:

AC_OUTPUT(vxl_config.h~:vxl_config.h.in)

# only touch the output file if it changed.
# there is a way to make configure do this automatically.
if test -f vxl_config.h; then
  if diff vxl_config.h vxl_config.h~ 2>&1 >/dev/null ; then
    echo "no change to vxl_config.h"
    rm -f vxl_config.h~
  else
    echo "replacing old vxl_config.h"
    mv -f vxl_config.h~ vxl_config.h
  fi
else
  echo "creating new vxl_config.h"
  mv -f vxl_config.h~ vxl_config.h
fi

