# v3p/CMakeLists.txt

PROJECT( vthreep )

SET( VTHREEP_INCLUDE_DIR ${vthreep_SOURCE_DIR} CACHE STATIC "v3p include files" )

IF (BUILD_CORE_NUMERICS)
  SUBDIRS(netlib)
ENDIF (BUILD_CORE_NUMERICS)

IF (BUILD_VGUI)
  SUBDIRS(Qv)
ENDIF (BUILD_VGUI)

IF (BUILD_CORE_IMAGING)
  OPTION( VXL_FORCE_V3P_ZLIB "Use V3P instead of any native ZLIB library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_ZLIB )
  SUBDIRS(zlib)

  OPTION( VXL_FORCE_V3P_JPEG "Use V3P instead of any native JPEG library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_JPEG )
  SUBDIRS(jpeg)

  OPTION( VXL_FORCE_V3P_TIFF "Use V3P instead of any native TIFF library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_TIFF )
  SUBDIRS(tiff)

  OPTION( VXL_FORCE_V3P_PNG "Use V3P instead of any native PNG library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_PNG )
  SUBDIRS(png)
  
  OPTION( VXL_FORCE_V3P_MPEG2 "Use V3P instead of any native MPEG2 library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_MPEG2 )
  SUBDIRS(mpeg2)

  OPTION( VXL_FORCE_V3P_DCMTK "Use V3P instead of any native DCMTK library?" NO)
  MARK_AS_ADVANCED( VXL_FORCE_V3P_DCMTK )
  SUBDIRS(dcmtk)
ENDIF (BUILD_CORE_IMAGING)
